--- a/docassemble/USCISApplications/data/questions/main.yml
+++ b/docassemble/USCISApplications/data/questions/main.yml
@@ -81,23 +81,22 @@ code: |
   if comp_screener:
     set_screener_sections
     screener_intro
+    nav.set_section("section_agreement")
+    set_progress(15)
     screener.name.first
-    screener_professional_role
     informed_agreement
     explained_role
     consent_agreement
-    nav.set_section("section_disclosures")
-    set_progress(15)
+    nav.set_section("section_applicant")
+    set_progress(40)
     users[0].screening_user
     users[0].aliases.gather()
     users[0].current_rep
-    users[0].notice_to_appear
-    users[0].hearing
+    if users[0].notice_to_appear:
+      users[0].hearing
     users[0].ice_check
     users[0].history.gather()
     asylum_deadline
-    nav.set_section("section_applicant")
-    set_progress(40)
     users[0].immigration_1a_yes
     users[0].application_2a_yes
     if users[0].married:
@@ -130,9 +129,11 @@ code: |
     users[0].hurt_past
     users[0].general_fear
     users[0].finishing_crime_yes
+    nav.set_section("section_disclosures")
+    set_progress(95)
     agrees_to_disclosures
     nav.set_section("section_download")
-    set_progress(95)
+    set_progress(100)
     forms_assembling
     get_docs_screen
   else:
@@ -322,9 +323,10 @@ code: |
 ---
 variable name: screener_sections
 data:
-  - section_disclosures: Disclosures
+  - section_agreement: Screening Agreement
   - section_applicant: Applicant
   - section_screener: Eligibility
+  - section_disclosures: Disclosures
   - section_download: Download and print
 ---
 id: signpost_screener
