Updates to the EAD and COV/COA

--- a/docassemble/USCISApplications/data/questions/combined_application_questions.yml
+++ b/docassemble/USCISApplications/data/questions/combined_application_questions.yml
@@ -1997,7 +1997,7 @@ objects:
   - users[i].i_912_fee_waiver: ALDocument.using(title=f"{users[i]} - Request for Fee Waiver", filename=space_to_underscore(f"{users[i]} - Request for Fee Waiver"), has_addendum=False)
 ---
 code: |
-  users[i].i_912_fee_waiver.enabled = application_kind in ['ead_and_tps','tps_only','ead_only'] and users[i].application_is_approved and users[i].fee_waiver_needed
+  users[i].i_912_fee_waiver.enabled = application_kind in ['ead_and_tps','tps_only'] and users[i].application_is_approved and users[i].fee_waiver_needed
 ---
 attachment:
   name: TPS_yes_answer_addendum
