--- a/docassemble/USCISApplications/data/questions/combined_application_questions.yml
+++ b/docassemble/USCISApplications/data/questions/combined_application_questions.yml
@@ -1604,16 +1604,16 @@ fields:
         interpreter_present
 ---
 ############################ FEE WAIVER ############################
-id: fee waiver needed
-question: |
-  Does ${ users[i] }'s application need a fee waiver?
-subquestion: |
-  You may be eligible for a fee waiver if you meet eligibility criteria.
-fields:
-  - no label: users[i].fee_waiver_needed
-    datatype: yesnoradio
-    default: ${ showifdef("users[0].fee_waiver_needed") if i > 0 else ''}
-    label above field: True
+# id: fee waiver needed
+# question: |
+#   Does ${ users[i] }'s application need a fee waiver?
+# subquestion: |
+#   You may be eligible for a fee waiver if you meet eligibility criteria.
+# fields:
+#   - no label: users[i].fee_waiver_needed
+#     datatype: yesnoradio
+#     default: ${ showifdef("users[0].fee_waiver_needed") if i > 0 else ''}
+#     label above field: True
 ---
 id: basis for your request
 question: |
